--- a/announce.html
+++ b/announce.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>EE 460N Announcements</h1>
-<h1>Enter Semester</h1>
+<h1>Spring, 2014</h1>
 <hr />
 <ul class="announcements">
 
