updated descriptor and ps

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <p>    
     <img src="blueball.gif" />
     Course <a href="descriptor.html">Descriptor</a> 
-    and <a href="https://docs.google.com/document/d/1MgtUSXCTTIFxhqtzSTcKXdjtA6e7ZXGY6F228lUL4Iw/">Syllabus</a> 
+    and <a href="https://docs.google.com/presentation/d/1G2_zxe0EJLjrqVPm3PoT92kODF5wAObrsPsU3TjNRk8/edit?usp=sharing">Syllabus</a> 
   </p>
   
   <p>
