--- a/labs.html
+++ b/labs.html
@@ -27,8 +27,9 @@ account. </li>
 <li>A quick tutorial on the <a href="http://www.ee.surrey.ac.uk/Teaching/Unix/">Unix environment</a> </li>
 <li>A reference card with commonly used commands for <a href="http://refcards.com/docs/gildeas/gnu-emacs/emacs-refcard-a4.pdf">emacs</a></li>
 <li>A reference card with commonly used commands for <a href="http://www.digilife.be/quickreferences/QRC/VIM%20Quick%20Reference%20Card.pdf">vim</a></li>
-<li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.</li>
-<!--
+<li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.
+<!--</li>
+
 <li>Lab Assignment Submission <a href="labs/lab_submit.html">Instructions</a> <font color="red" size="-1">(posted - 02/03/13)</font></li>
 <li>Lab Assignment Testing <a href="labs/lab_test.html">Instructions</a> <font color="red" size="-1">(posted - 03/18/13)</font></li>
 </ul>
@@ -178,6 +179,24 @@ may just happen to behave correctly on our test cases. <strong>It is your
   <font color="red" size="-1">(last updated - 01/28/13)</font></li>
   --!>
 </ul>
+!-->
+<h2>Lab Assignment 0
+  <font color="red" size="-1">(last updated - 01/14/14)</font></h2>
+<p><em>Due: Jan 19,2014 11:59 pm</em></p>
+<ul>  
+  <li><a href="https://docs.google.com/a/utexas.edu/document/d/1Zs3BTt8EDvyHripQTq1bJuz5ZG38SaAqflIDEJwzHMs/edit?pli=1" title ="Lab1 instructions">Lab0 Instructions</a>
 
+<li><a href="labs/lab0/Lab0Regrade.new.html" title="Lab Assignment 0 regrade instructions">Regrade instructions</a>
+<font color="red" size="-1">(posted - 01/14/14)</font></li>
+
+
+<li><a href="labs/lab0/Lab0Submit.html" title="Lab Assignment 0 submission instructions">Submission instructions</a>
+  <font color="red" size="-1">(posted - 01/14/14)</font></li>
+<li><a href="labs/lab0/Lab0Functions.html" title="Lab Assignment 0 useful code">Useful code</a>
+<font color="red" size="-1">(posted - 01/14/14)</font></li>
+!-->
+
+<li><a href="labs/lab0/Lab0Clarifications.html" title="Lab Assignment 0 clarifications">Clarifications</a>
+  <font color="red" size="-1">(last updated - 01/14/14)</font></li>
 </body>
 </html>
