--- a/labs.html
+++ b/labs.html
@@ -179,22 +179,12 @@ may just happen to behave correctly on our test cases. <strong>It is your
   <font color="red" size="-1">(last updated - 01/28/13)</font></li>
   --!>
 </ul>
-<h2>Lab Assignment 0
+<h2><a href="https://docs.google.com/document/d/1ppQdGyR-5wuSj8hu7_KT7PF-qVupBs1ryYl8Q90XE1Y/edit?usp=sharing">Lab Assignment 0</a>
   <font color="red" size="-1">(last updated - 01/14/14)</font></h2>
 <p><em>Due: Jan 19,2014 11:59 pm</em></p>
 <ul>  
-  <li><a href="https://docs.google.com/document/d/1ppQdGyR-5wuSj8hu7_KT7PF-qVupBs1ryYl8Q90XE1Y/edit?usp=sharing" title ="Lab1 instructions">Lab0 Instructions</a>
-
-<li><a href="labs/lab0/Lab0Regrade.new.html" title="Lab Assignment 0 regrade instructions">Regrade instructions</a>
-<font color="red" size="-1">(posted - 01/14/14)</font></li>
-
 
 <li><a href="labs/lab0/Lab0Submit.html" title="Lab Assignment 0 submission instructions">Submission instructions</a>
   <font color="red" size="-1">(posted - 01/14/14)</font></li>
-<li><a href="labs/lab0/Lab0Functions.html" title="Lab Assignment 0 useful code">Useful code</a>
-<font color="red" size="-1">(posted - 01/14/14)</font></li>
-
-<li><a href="labs/lab0/Lab0Clarifications.html" title="Lab Assignment 0 clarifications">Clarifications</a>
-  <font color="red" size="-1">(last updated - 01/14/14)</font></li>
 </body>
 </html>
