--- a/labs/lab0/Lab0Submit.html
+++ b/labs/lab0/Lab0Submit.html
@@ -13,10 +13,9 @@
 
 <p>You must use the following naming convention for the files in Lab 0.</p>
 <ul> 
-<li><tt>Lab0Submit.txt</tt> &ndash; The LC-3b assembly language program you wrote.</li> 
+<li><tt>Lab0Submit.txt</tt> &ndash; The text file you wrote.
 </ul>
 
-<p>You may not submit more than two files for Lab 0.</p>
 <h2>Notes</h2>
 
 <p>Before the deadline, you may resubmit any of the files without
