added office hours

--- a/faculty.html
+++ b/faculty.html
@@ -21,7 +21,7 @@
           <li>Homepage: <a href="http://hps.ece.utexas.edu/people/suleman">
             http://hps.ece.utexas.edu/people/suleman</a></li>
           <li>Email: <a href="mailto:aater@utexas.edu">aater@utexas.edu</a></li>
-          <li>Office Hours:</li>
+          <li>Office Hours: MW 4:00 PM - 5:00 PM in ENS 308</li>
         </ul>
         </li>
       </ul>
@@ -36,7 +36,7 @@
         <h3><a id="Patel">Jay Patel</a></h3>
         <ul>
           <li>Email: <a href="mailto:jaypatel@utexas.edu">jaypatel@utexas.edu</a></li>
-          <li>Office Hours:</li>
+          <li>Office Hours: M 2:00 PM - 3:30 PM, W 3:00 PM - 4:30 PM in ENS 139</li>
 <!--          <li><font color="red">Extra Office Hours for Lab4: Sunday 04 Nov, 1-2.30pm in ENS 3rd Floor Lounge</font></li> !-->
           <li>Discussion Sections:
           <ul>
@@ -51,7 +51,7 @@
         <h3><a id="Pruett"> Stephen Pruett</a></h3>
         <ul>
           <li>Email: <a href="mailto:stephen.pruett@utexas.edu">stephen.pruett@utexas.edu</a></li>
-          <li>Office Hours:</li>
+          <li>Office Hours: Th 11:00 AM - 12:30 PM, F 12:00 PM - 1:30 PM in ENS 139</li>
           <!--<li><font color="red">Temporary Office Hours (Week of Jan. 29th): M 1:00pm-3:00pm, T
             3:30pm-6:00pm in ENS 5th floor lab</font></li>-->
           <li>Discussion Sections:
@@ -68,7 +68,7 @@
         <h3><a id="Sakhuja">Chirag Sakhuja</a></h3>
         <ul>
           <li>Email: <a href="mailto:chirag.sakhuja@utexas.edu">chirag.sakhuja@utexas.edu</a></li>
-          <li>Office Hours:</li>
+          <li>Office Hours: T 4:00 PM - 5:30 PM, F 1:30 PM - 3:00 PM in ENS 139</li>
           <!--<li><font color="red">Weekend Office Hours for Exam 1: Saturday (March 2) 4:00 pm to 6:00 pm in ENS 313 (3rd floor lounge)</font></li>-->
           <li>Discussion Sections:
           <ul>
