linked ENS on office hours. last updated.

--- a/labs.html
+++ b/labs.html
@@ -180,7 +180,7 @@ may just happen to behave correctly on our test cases. <strong>It is your
   --!>
 </ul>
 <h2><a href="https://docs.google.com/document/d/1ppQdGyR-5wuSj8hu7_KT7PF-qVupBs1ryYl8Q90XE1Y/edit?usp=sharing">Lab Assignment 0</a>
-  <font color="red" size="-1">(last updated - 01/14/14)</font></h2>
+  <font color="red" size="-1">(posted - 01/14/14)</font></h2>
 <p><em>Due: Jan 19,2014 11:59 pm</em></p>
 <ul>  
 
