added direction for submission option

--- a/labs/lab_submit.html
+++ b/labs/lab_submit.html
@@ -45,6 +45,11 @@ reported, you can immediately proceed to step 4.</p>
 </li>
 </ol>
 <li>
+<p>Make sure the list of files you have submitted matches the list of files that the grader accepts by using the following command:</p>
+<pre><tt>submit-ee360n -show_acceptable_files</tt></pre>
+</li>
+
+<li>
 <p>The final step in submitting your program for actual grading. <b>This
   can only be done ONCE, and WILL determine your final grade on this
   lab.</b> Generate your FINAL grade report with the following
