updated "last updated" tags

--- a/labs.html
+++ b/labs.html
@@ -185,6 +185,6 @@ may just happen to behave correctly on our test cases. <strong>It is your
 <ul>  
 
 <li><a href="labs/lab0/Lab0Submit.html" title="Lab Assignment 0 submission instructions">Submission instructions</a>
-  <font color="red" size="-1">(posted - 01/14/14)</font></li>
+  <font color="red" size="-1">(last updated - 01/16/14)</font></li>
 </body>
 </html>
