--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
   <p>
   <p>
     <img src="blueball.gif" />
-    <a href="ps.html">Problem Sets</a> <font color="red" size="-1">
-      </font>
+    <a href="ps.html">Problem Sets</a>
+    <font color="red" size="-1">(last updated - 01/20/14)</font>
   </p>
 
   <p>
