--- a/ps.html
+++ b/ps.html
@@ -11,6 +11,13 @@
 
     <h1>Spring, 2014</h1>
     <hr />
+    <li>
+    <h2><a href="https://docs.google.com/a/utexas.edu/document/d/11AXAAlrajyrPzAuPywtaeHtLWKAq9UtS31rYjgmk0Xk/">Problem Set 1</a> <font color="red" size="-1"> (posted - 01/20/14)</font></h2> 
+    <ul>
+      <li><em>Due Jan 27, before class</em></li>
+      <li><em>Problems marked in Red have been moved to PS2</em></li>
+      <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
+    </ul>
 <!--
     <h2><a href="https://docs.google.com/document/d/1vMVL8bzU3XVL0VcJtrgnrdTSOBwXUL5IL11ffoTwNiE/edit?usp=sharing">Problem Set X</a> <font color="red" size="-1"> (posted - XX/XX/XX)</font></h2> 
     <ul>
