--- a/faculty.html
+++ b/faculty.html
@@ -54,7 +54,7 @@
         <ul>
           <li>Email: <a href="mailto:stephen.pruett@utexas.edu">stephen.pruett@utexas.edu</a></li>
           <li>Office Hours: Th 11:00 AM - 12:30 PM, F 12:00 PM - 1:30 PM in  
-	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 139</li>
+	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 507 <font color="red" size="-1">(last updated 01/20/14)</font></li>
           <!--<li><font color="red">Temporary Office Hours (Week of Jan. 29th): M 1:00pm-3:00pm, T
             3:30pm-6:00pm in ENS 5th floor lab</font></li>-->
           <li>Discussion Sections:
@@ -72,7 +72,7 @@
         <ul>
           <li>Email: <a href="mailto:chirag.sakhuja@utexas.edu">chirag.sakhuja@utexas.edu</a></li>
           <li>Office Hours: T 4:00 PM - 5:30 PM, F 1:30 PM - 3:00 PM in 
-	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 139</li>
+	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 507 <font color="red" size="-1">(last updated - 01/20/14)</font></li>
           <!--<li><font color="red">Weekend Office Hours for Exam 1: Saturday (March 2) 4:00 pm to 6:00 pm in ENS 313 (3rd floor lounge)</font></li>-->
           <li>Discussion Sections:
           <ul>
