--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <center><h3>Spring, 2014</h3></center>
     <hr>
     <br/>
+    <blink><center><h3><p><font color="red" size="+1">
+    	All classes, discussion sections, and office hours canceled January 24, 2014</font></p></h3></center></blink>
 <!--
     <center><h4><p><font color="red" size=+1>
           Final Exam information:<br>
@@ -22,8 +24,8 @@
 
    <!--  blinky notice script -->
    <script type="text/javascript">
-     <!--
-     spe=500;
+     spe=1500;
+     aspe=spe;
      na=document.all.tags("blink");
      swi=1;
      bringBackBlinky();
@@ -33,19 +35,20 @@
        if (swi == 1) {
          sho="visible";
          swi=0;
+	 aspe=spe;
        }
        else {
          sho="hidden";
          swi=1;
+	 aspe=spe/5;
        }
 
        for(i=0;i<na.length;i++) {
          na[i].style.visibility=sho;
        }
 
-       setTimeout("bringBackBlinky()", spe);
+       setTimeout("bringBackBlinky()", aspe);
      }
-     -->
    </script>
     
     <h3>
