extra office hours

--- a/faculty.html
+++ b/faculty.html
@@ -73,7 +73,7 @@
           <li>Email: <a href="mailto:chirag.sakhuja@utexas.edu">chirag.sakhuja@utexas.edu</a></li>
           <li>Office Hours: T 4:00 PM - 5:30 PM, F 1:30 PM - 3:00 PM in 
 	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 139 <font color="red" size="-1">(last updated - 01/27/14)</font></li>
-          <!--<li><font color="red">Weekend Office Hours for Exam 1: Saturday (March 2) 4:00 pm to 6:00 pm in ENS 313 (3rd floor lounge)</font></li>-->
+          <li><font color="red">Extra Office Hours: Wednesday, January 29 from 12:00 pm to 3:00 pm in ENS 139</font></li>
           <li>Discussion Sections:
           <ul>
             <li>Unique #16995 (Grad: 17285), F 12:00pm &ndash; 1:30pm in <a
