--- a/faculty.html
+++ b/faculty.html
@@ -39,7 +39,7 @@
           <li>Email: <a href="mailto:jaypatel@utexas.edu">jaypatel@utexas.edu</a></li>
           <li>Office Hours: M 2:00 PM - 3:30 PM, W 3:00 PM - 4:30 PM in 
 	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 139</li>
-<!--          <li><font color="red">Extra Office Hours for Lab4: Sunday 04 Nov, 1-2.30pm in ENS 3rd Floor Lounge</font></li> !-->
+	  <li><font color="red">Extra Office Hours: Sunday, February 2 from 10:00 am to 11:30 am in ENS 139</font></li>
           <li>Discussion Sections:
           <ul>
             <li>Unique #17000 (Grad: 17290), F 1:30pm &ndash; 3:00pm in <a
@@ -55,8 +55,7 @@
           <li>Email: <a href="mailto:stephen.pruett@utexas.edu">stephen.pruett@utexas.edu</a></li>
           <li>Office Hours: Th 11:00 AM - 12:30 PM, F 12:00 PM - 1:30 PM in  
 	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 139 <font color="red" size="-1">(last updated 01/27/14)</font></li>
-          <!--<li><font color="red">Temporary Office Hours (Week of Jan. 29th): M 1:00pm-3:00pm, T
-            3:30pm-6:00pm in ENS 5th floor lab</font></li>-->
+	  <li><font color="red">Extra Office Hours: Sunday, February 2 from 11:30 am to 1:00 pm in ENS 139</font></li>
           <li>Discussion Sections:
           <ul>
             <li>Unique #16985 (Grad: 17275), F 9:00am &ndash; 10:30am in <a
@@ -73,7 +72,7 @@
           <li>Email: <a href="mailto:chirag.sakhuja@utexas.edu">chirag.sakhuja@utexas.edu</a></li>
           <li>Office Hours: T 4:00 PM - 5:30 PM, F 1:30 PM - 3:00 PM in 
 	  <a href="http://www.utexas.edu/maps/main/buildings/ens.html">ENS</a> 139 <font color="red" size="-1">(last updated - 01/27/14)</font></li>
-          <li><font color="red">Extra Office Hours: Wednesday, January 29 from 12:00 pm to 3:00 pm in ENS 139</font></li>
+          <li><font color="red">Extra Office Hours: Sunday, February 2 from 1:00 pm to 2:30 pm in ENS 139</font></li>
           <li>Discussion Sections:
           <ul>
             <li>Unique #16995 (Grad: 17285), F 12:00pm &ndash; 1:30pm in <a
