added all lab files and posted lab 2

--- a/labs.html
+++ b/labs.html
@@ -30,6 +30,15 @@ account. </li>
 <li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.</li>
 </ul>
 
+<h2><a href="https://docs.google.com/a/utexas.edu/document/d/18Ck4wF4D4pENk8aTH4iO0BgX8C-IxqKpB70dqkv94TE/" title ="Lab2 instructions">Lab Assignment 2</a>
+  <font color="red" size="-1">(posted - 02/03/14)</font></h2>
+<p><em>Due: Feb 9 11:59 pm</em></p>
+<ul>
+<li><a href="labs/lab2/Lab2Submit.html" title="Lab Assignment 2 submission instructions">Submission instructions</a>
+  <font color="red" size="-1">(posted - 02/03/14)</font></li>
+<li><a href="labs/lab2/assembler.linux" title="Sample Assembler">LC-3b Assembler for Linux</a>
+  <font color="red" size="-1">(posted - 02/03/14)</font></li>
+</ul>
 
 <h2><a href="https://docs.google.com/a/utexas.edu/document/d/192f2GppVnZ86rNYzbi-NG0el9ZELjjNCBfTtCQAhwMs/" title ="Lab1 instructions">Lab Assignment 1</a>
   <font color="red" size="-1">(posted - 01/22/14)</font></h2>
