--- a/labs/lab3/Lab3Submit.html
+++ b/labs/lab3/Lab3Submit.html
@@ -14,9 +14,9 @@
 <h3>The University of Texas at Austin</h3>
 </center>
 
-EE 460N, Fall 2013<br />
+EE 460N, Spring 2013<br />
 Submission Instructions for Lab Assignment 3<br />
-Due: Sunday, October 6th, 2013, 11:59 pm<br />
+Due: Sunday, February 23rd, 2014, 11:59 pm<br />
 <h2>Important Notes</h2>
 <p>You must use the following naming convention for the files in Lab 3:</p>
 <ol>
