--- a/labs.html
+++ b/labs.html
@@ -30,6 +30,20 @@ account. </li>
 <li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.</li>
 </ul>
 
+<h2><a href="https://docs.google.com/a/utexas.edu/document/d/1xBlZmPMdMXYzOHFxYyGcPr5TWFlfg511czOptlT2E_I/" title ="Lab3 instructions">Lab Assignment 3</a>
+  <font color="red" size="-1">(posted - 02/10/14)</font></h2>
+<p><em>Due: Feb 23 11:59 pm</em></p>
+<ul>
+<li><a href="labs/lab3/Lab3Submit.html" title="Lab Assignment 3 submission instructions">Submission instructions</a>
+  <font color="red" size="-1">(posted - 02/10/14)</font></li>
+<li><a href="labs/lab3/Lab3Example.html" title="Lab Assignment 3 example">Example of a simulator run</a>
+  <font color="red" size="-1">(posted - 02/10/14)</font></li>
+<li><a href="labs/lab3/control_store.xls" title="Control store template in Excel format">The control store template in Excel format</a>
+  <font color="red" size="-1">(posted - 02/10/14)</font></li>
+<li><a href="labs/lab3/CS_sheet.pdf" title="Control store template in PDF format">The control store template in PDF format</a>
+  <font color="red" size="-1">(posted - 02/10/14)</font></li>
+</ul>
+
 <h2><a href="https://docs.google.com/a/utexas.edu/document/d/18Ck4wF4D4pENk8aTH4iO0BgX8C-IxqKpB70dqkv94TE/" title ="Lab2 instructions">Lab Assignment 2</a>
   <font color="red" size="-1">(posted - 02/03/14)</font></h2>
 <p><em>Due: Feb 9 11:59 pm</em></p>
