--- a/labs.html
+++ b/labs.html
@@ -36,7 +36,7 @@ account. </li>
 <ul>
 <li><a href="labs/lab3/Lab3Submit.html" title="Lab Assignment 3 submission instructions">Submission instructions</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
-<li><a href="labs/lab3/Lab3Example.html" title="Lab Assignment 3 example">Example of a simulator run</a>
+<li><a href="labs/lab3/Lab3example.html" title="Lab Assignment 3 example">Example of a simulator run</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
 <li><a href="labs/lab3/control_store.xls" title="Control store template in Excel format">The control store template in Excel format</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
