--- a/ps.html
+++ b/ps.html
@@ -12,7 +12,7 @@
     <h1>Spring, 2014</h1>
     <hr />
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/15fjhdkvms2R2EeepxEXLDzqX2xJvyUWsITJQuvya2Lc/">Problem Set 2</a>
-    <font color="red" size="-1">(posted - 02/10/14)</font></h2> 
+    <font color="red" size="-1">(last updated - 02/11/14)</font></h2> 
     <ul>
       <li><em>Due Feb 17, before class</em></li>
       <li><em>Problems marked in Red have been moved to PS3</em></li>
