added all sample exams

--- a/handouts.html
+++ b/handouts.html
@@ -177,62 +177,48 @@
   </li>
 
 </ul>
---!>
+-->
 
-<!--
 <h2>Exams</h2>
 <ul>
-  <li><p>Old Exams can be accessed from Dr. Patt's Website <a href="http://users.ece.utexas.edu/~patt">Old exams</a></p></li>
-  
-  <li><p>You can look up past exams from previous year's websites, accessible
-  from Dr. Patt's home page. Included below are exams not found on previous
-  year's websites.</p></li>
+  <li><p>Old Exams can be accessed from <a href="http://users.ece.utexas.edu/~patt">Dr. Patt's Website</a></p></li>
+  <li><p>You can look up past exams from previous year's websites, accessible from Dr. Patt's home page. Included below are exams not found on previous year's websites.</p></li>
 
   <li>Exam 1
     <ul>
-      <li><p><a href="http://users.ece.utexas.edu/~patt/13s.460N/13f.460N/handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
-        href="http://users.ece.utexas.edu/~patt/13s.460N/13f.460N/handouts/f13_exam1_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 10/21/13)</font> </p></li>
+      <li><p><a href="handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
+        href="handouts/f13_exam1_sol.pdf">Solution</a> <font color="red"
+        size="-1"> (posted - 02/20/14)</font> </p></li>
       <li><p><a href="handouts/s13_exam1.pdf">Spring 2013 Exam 1</a> and <a
         href="handouts/s13_exam1_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 10/08/13)</font> </p></li>
-      <li><p><a href="http://users.ece.utexas.edu/~patt/11s.460N/handouts/s11_exam1.pdf">Spring 2011 Exam 1</a> and <a
-        href="http://users.ece.utexas.edu/~patt/11s.460N/handouts/s11_exam1_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 10/08/13)</font> </p></li>
+        size="-1"> (posted - 02/20/14)</font> </p></li>
+      <li><p><a href="handouts/s11_exam1.pdf">Spring 2011 Exam 1</a> and <a
+        href="handouts/s11_exam1_sol.pdf">Solution</a> <font color="red"
+        size="-1"> (posted - 02/20/14)</font> </p></li>
     </ul>
   </li>
 
-  <li>Exam 2: <font color="red">Irrelevant questions have been crossed off on the exams.</font>
+  <li>Exam 2
     <ul>
-      <li><p><a href="http://users.ece.utexas.edu/~patt/13s.460N/13f.460N/handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
-        href="http://users.ece.utexas.edu/~patt/13s.460N/13f.460N/handouts/f13_exam2_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 11/25/13)</font> </p></li>
-      <li><p><a href="handouts/s13_exam1_f13.pdf">Spring 2013 Exam 1</a> and <a
-        href="handouts/s13_exam1_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 11/13/13)</font> </p></li>
+      <li><p><a href="13s.460N/13f.460N/handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
+        href="handouts/f13_exam2_sol.pdf">Solution</a> <font color="red"
+        size="-1"> (posted - 02/20/14)</font> </p></li>
       <li><p><a href="handouts/s13_exam2_f13.pdf">Spring 2013 Exam 2</a> and <a
         href="handouts/s13_exam2_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 11/13/13)</font> </p></li>
-      <li><p><a href="handouts/s11_exam1_f13.pdf">Spring 2011 Exam 1</a> and <a
-        href="http://users.ece.utexas.edu/~patt/11s.460N/handouts/s11_exam1_sol.pdf">Solution</a> <font color="red"
-        size="-1"> (posted - 11/13/13)</font> </p></li>
+        size="-1"> (posted - 02/20/14)</font> </p></li>
+      <li><p><a href="handouts/s11_exam2_f13.pdf">Spring 2011 Exam 2</a> and <a
+        href="handouts/s11_exam1_sol.pdf">Solution</a> <font color="red"
+        size="-1"> (posted - 02/20/14)</font> </p></li>
     </ul>
   </li>
 
   <li>Final
     <ul>
       <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
-          href="handouts/s11_final_sol.pdf">Solution </a> <font color="red"
-          size="-1"> (posted - 10/08/13)</font> </p></li>
+        href="handouts/s11_final_sol.pdf">Solution </a> <font color="red"
+        size="-1"> (posted - 02/20/14)</font> </p></li>
     </ul>
   </li>
-  <li><p><a href="handouts/s13_exam2.pdf">Spring 2013 Exam 2</a> and <a
-    href="handouts/s13_exam2_sol.pdf">Solution</a> <font color="red"
-    size="-1"> (updated - 05/09/13)</font> </p></li>
-  <li><p><a href="handouts/s11_exam2.pdf">Spring 2011 Exam 2</a> and <a
-    href="handouts/s11_exam2_sol.pdf">Solution </a> <font color="red"
-    size="-1"> (posted - 03/21/13)</font>
-  !-->
 </ul>
   
 </body>
