--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <p>
     <img src="blueball.gif" />
-    <a href="handouts.html">Handouts</a> <font color="red" size="-1">
+    <a href="handouts.html">Handouts</a> <font color="red" size="-1">(last updated - 02/20/14)
       </font>
   </p>
 
