--- a/handouts.html
+++ b/handouts.html
@@ -183,6 +183,7 @@
 <ul>
   <li><p>Old Exams can be accessed from <a href="http://users.ece.utexas.edu/~patt">Dr. Patt's Website</a></p></li>
   <li><p>You can look up past exams from previous year's websites, accessible from Dr. Patt's home page. Included below are exams not found on previous year's websites.</p></li>
+  <li><p>Note that we are moving in a different order this semester, so you may need to look through all exams to practice relevant questions.</p></li>
 
   <li>Exam 1
     <ul>
