fixed link in exams

--- a/handouts.html
+++ b/handouts.html
@@ -201,7 +201,7 @@
 
   <li>Exam 2
     <ul>
-      <li><p><a href="13s.460N/13f.460N/handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
+      <li><p><a href="handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
         href="handouts/f13_exam2_sol.pdf">Solution</a> <font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
       <li><p><a href="handouts/s13_exam2_f13.pdf">Spring 2013 Exam 2</a> and <a
