--- a/ps.html
+++ b/ps.html
@@ -34,7 +34,7 @@
     <font color="red" size="-1">(last updated - 02/20/14)</font></h2> 
     <ul>
       <li><em>Due , before class</em></li>
-      <li><em>Problems marked in black are cache question for practice</em></li>
+      <li><em>Problems marked in black are cache questions for practice</em></li>
     </ul>
     
     
