--- a/ps.html
+++ b/ps.html
@@ -30,7 +30,7 @@
     </ul>
     
     
-    <h2><a href="">Problem Set </a>
+    <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1ds8jOPcRLq33OTRUuJP1Ubr9wEVMA2tNqIdcy5GK3Ks">Problem Set </a>
     <font color="red" size="-1">(last updated - 02/20/14)</font></h2> 
     <ul>
       <li><em>Due , before class</em></li>
