added ps2 solution

--- a/ps.html
+++ b/ps.html
@@ -21,6 +21,8 @@
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/15fjhdkvms2R2EeepxEXLDzqX2xJvyUWsITJQuvya2Lc/">Problem Set 2</a>
     <font color="red" size="-1">(last updated - 02/11/14)</font></h2> 
     <ul>
+      <li><a href="https://docs.google.com/a/utexas.edu/document/d/1kIyZvNLt8Di2AXqX_h53gCT4BrMPYxs14mWLeS10mO4/">Solution</a>
+      <font color="red" size="-1">(posted - 02/21/14)</font></li>
       <li><em>Due Feb 17, before class</em></li>
       <li><em>Problems marked in Red have been moved to PS3</em></li>
       <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
