--- a/handouts.html
+++ b/handouts.html
@@ -204,10 +204,10 @@
       <li><p><a href="handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
         href="handouts/f13_exam2_sol.pdf">Solution</a> <font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
-      <li><p><a href="handouts/s13_exam2_f13.pdf">Spring 2013 Exam 2</a> and <a
+      <li><p><a href="handouts/s13_exam2.pdf">Spring 2013 Exam 2</a> and <a
         href="handouts/s13_exam2_sol.pdf">Solution</a> <font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
-      <li><p><a href="handouts/s11_exam2_f13.pdf">Spring 2011 Exam 2</a> and <a
+      <li><p><a href="handouts/s11_exam2.pdf">Spring 2011 Exam 2</a> and <a
         href="handouts/s11_exam1_sol.pdf">Solution</a> <font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
     </ul>
