--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
     <blink><center><h3><p><font color="red" size="+1">
     	All classes, discussion sections, and office hours canceled January 28, 2014</font></p></h3></center></blink>
     -->
-<!--
-    <center><h4><p><font color="red" size=+1>
-          Final Exam information:<br>
-    <p>December 13, 7-10PM, GDC 2.216
-</font></p></h4></center>
-!-->
 
+    <center><h4><p><font color="red" size=+1>
+          Exam 1 Information:<br>
+    <p>February 26, 5:00-6:30 PM, WEL 2.246</font></p></h4></center>
 
    <!--  blinky notice script -->
    <script type="text/javascript">
