--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     	All classes, discussion sections, and office hours canceled January 28, 2014</font></p></h3></center></blink>
     -->
 
-    <center><h4><p><font color="red" size=+1>
-          Exam 1 Information:<br>
-    <p>February 26, 5:00-6:30 PM, WEL 2.246</font></p></h4></center>
+    <center><h4><font color="red" size=+1>
+    <p>Exam 1 Information:<br>
+    <p>February 26, 5:00-6:30 PM<br>
+    <p>WEL 2.246</font></h4></center>
 
    <!--  blinky notice script -->
    <script type="text/javascript">
