added lab 4, made few layout changes

--- a/labs.html
+++ b/labs.html
@@ -30,17 +30,48 @@ account. </li>
 <li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.</li>
 </ul>
 
+<h2><a href="https://docs.google.com/a/utexas.edu/document/d/19ve97shgkGHkykdmJrU4a0nGwTzeX0sH5MrxJPYm5XU/" title ="Lab4 instructions">Lab Assignment 4</a>
+  <font color="red" size="-1">(posted - 02/28/14)</font></h2>
+<p><em>Due: Mar 23 11:59 pm</em></p>
+<ul>
+<li><a href="labs/lab4/Lab4Submit.html" title="Lab Assignment 4 submission instructions">Submission instructions</a>
+  <font color="red" size="-1">(posted - 02/28/14)</font></li>
+  <li>You can use the following xfig files or pdf files to show the changes you made to the datapath, state diagram and microsequencer.
+  You can modify the xfig files using the xfig drawing program installed on LRC UNIX/Linux machines.
+  Please note that you can submit hand drawn diagrams (you may use the pdf files), if you are not comfortable using xfig.
+  <ul>
+      <li>datapath <a href="labs/lab4/datapath.fig" title="Datapath figure">xfig</a>, <a href="labs/lab4/datapath.pdf" title="Datapath PDF">pdf</a>
+      <font color="red" size="-1">(posted - 02/28/14)</font></li>
+      <li>state machine <a href="labs/lab4/state.fig" title="State machine figure">xfig</a>, <a href="labs/lab4/state.pdf" title="State machine PDF">pdf</a>
+      <font color="red" size="-1">(posted - 02/28/14)</font></li>
+      <li>microsequencer <a href="labs/lab4/microseq.fig" title="Microsequencer figure">xfig</a>, <a href="labs/lab4/microseq.pdf" title="Microsequencer PDF">pdf</a>
+      <font color="red" size="-1">(posted - 02/28/14)</font></li>
+  </ul>
+  </li>
+  <li><strong>Important note:</strong> Make sure your Lab 3 implementation is correct before starting Lab 4.
+  You may use the submit-ee360n command on grader1 to test your Lab 3 program.
+  Submit the lc3bsim3.c and ucode3 files first with submit-ee360n -late, then run submit-ee360n -lategrade.
+  Run submit-ee360n to see all available options.
+  Passing all the tests does not mean that your Lab 3 is correct!
+  An incorrect program may just happen to behave correctly on our test cases.
+  It is your responsibility to ensure that your Lab 3 is correct. See <a href="labs/lab_test.html">this</a> for more details.</li>
+  <li><a href="labs/lab3/control_store.xls" title="Control store template in Excel format">The control store template in Excel format</a>
+  <font color="red" size="-1">(posted - 02/28/14)</font></li>
+  <li><a href="labs/lab3/CS_sheet.pdf" title="Control store template in PDF format">The control store template in PDF format</a>
+  <font color="red" size="-1">(posted - 02/28/14)</font></li>
+</ul>
+
 <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1xBlZmPMdMXYzOHFxYyGcPr5TWFlfg511czOptlT2E_I/" title ="Lab3 instructions">Lab Assignment 3</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></h2>
 <p><em>Due: Feb 23 11:59 pm</em></p>
 <ul>
-<li><a href="labs/lab3/Lab3Submit.html" title="Lab Assignment 3 submission instructions">Submission instructions</a>
+  <li><a href="labs/lab3/Lab3Submit.html" title="Lab Assignment 3 submission instructions">Submission instructions</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
-<li><a href="labs/lab3/Lab3example.html" title="Lab Assignment 3 example">Example of a simulator run</a>
+  <li><a href="labs/lab3/Lab3example.html" title="Lab Assignment 3 example">Example of a simulator run</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
-<li><a href="labs/lab3/control_store.xls" title="Control store template in Excel format">The control store template in Excel format</a>
+  <li><a href="labs/lab3/control_store.xls" title="Control store template in Excel format">The control store template in Excel format</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
-<li><a href="labs/lab3/CS_sheet.pdf" title="Control store template in PDF format">The control store template in PDF format</a>
+  <li><a href="labs/lab3/CS_sheet.pdf" title="Control store template in PDF format">The control store template in PDF format</a>
   <font color="red" size="-1">(posted - 02/10/14)</font></li>
 </ul>
 
@@ -48,9 +79,9 @@ account. </li>
   <font color="red" size="-1">(posted - 02/03/14)</font></h2>
 <p><em>Due: Feb 9 11:59 pm</em></p>
 <ul>
-<li><a href="labs/lab2/Lab2Submit.html" title="Lab Assignment 2 submission instructions">Submission instructions</a>
+  <li><a href="labs/lab2/Lab2Submit.html" title="Lab Assignment 2 submission instructions">Submission instructions</a>
   <font color="red" size="-1">(posted - 02/03/14)</font></li>
-<li><a href="labs/lab2/assembler.linux" title="Sample Assembler">LC-3b Assembler for Linux</a>
+  <li><a href="labs/lab2/assembler.linux" title="Sample Assembler">LC-3b Assembler for Linux</a>
   <font color="red" size="-1">(posted - 02/03/14)</font></li>
 </ul>
 
@@ -58,17 +89,17 @@ account. </li>
   <font color="red" size="-1">(posted - 01/22/14)</font></h2>
 <p><em>Due: Feb 2 11:59 pm</em></p>
 <ul>
-<li><a href="labs/lab1/Lab1Submit.html" title="Lab Assignment 1 submission instructions">Submission instructions</a>
+  <li><a href="labs/lab1/Lab1Submit.html" title="Lab Assignment 1 submission instructions">Submission instructions</a>
   <font color="red" size="-1">(posted - 01/22/14)</font></li>
-<li><a href="labs/lab1/Lab1Functions.html" title="Lab Assignment 1 useful code">Useful code</a>
+  <li><a href="labs/lab1/Lab1Functions.html" title="Lab Assignment 1 useful code">Useful code</a>
   <font color="red" size="-1">(posted - 01/22/14)</font></li>
 </ul>
 
 <h2><a href="https://docs.google.com/document/d/1ppQdGyR-5wuSj8hu7_KT7PF-qVupBs1ryYl8Q90XE1Y/edit?usp=sharing">Lab Assignment 0</a>
   <font color="red" size="-1">(posted - 01/14/14)</font></h2>
 <p><em>Due: Jan 19, 2014 11:59 pm</em></p>
-<ul>  
-<li><a href="labs/lab0/Lab0Submit.html" title="Lab Assignment 0 submission instructions">Submission instructions</a>
+<ul>
+  <li><a href="labs/lab0/Lab0Submit.html" title="Lab Assignment 0 submission instructions">Submission instructions</a>
   <font color="red" size="-1">(last updated - 01/16/14)</font></li>
 </ul>
 
