--- a/labs/lab4/Lab4Submit.html
+++ b/labs/lab4/Lab4Submit.html
@@ -14,9 +14,9 @@
 <h3>The University of Texas at Austin</h3>
 </center>
 
-EE 460N, Fall 2013<br />
+EE 460N, Spring 2014<br />
 Submission Instructions for Lab Assignment 4<br />
-Due: Sunday, November 3, 2013, 11:59 pm<br />
+Due: Sunday, March 23, 2014, 11:59 pm<br />
 <h2>Important Notes</h2>
 You must use the following naming convention for the files in Lab 4.
 <ul>
@@ -52,7 +52,7 @@ showing the changes you have implemented in the datapath, state diagram, microse
 be in the following formats: text, postscript, PDF or HTML with images.-->
 <li>
 <strong>Please upload a copy of your documentation on blackboard before
-class on Monday, November 4, 2013.</strong>
+class on Monday, March 24, 2014.</strong>
 </li>
 </ul>
 <p>You may not submit more than 10 files for Lab 4.</p>
