--- a/labs/lab_test.html
+++ b/labs/lab_test.html
@@ -58,7 +58,7 @@ for.</p>
 </li>
 </ol>
 <p>Note 1: You will only be able to run tests for the lab immediately previous to the lab currently due. For example, if Lab 4 is currently due, you will only be able to test your Lab 3. </p>
-<p>Note 2: currently the submit script works only on grader1. </p>
+<p>Note 2: Currently the submit script works only on grader1. </p>
 <p>Note 3: You may run:</p>
 <pre><tt>submit-ee360n</tt></pre>
 <p>(with no parameters, exactly as shown above) to display the various options
