added this semester exam 1

--- a/handouts.html
+++ b/handouts.html
@@ -186,6 +186,9 @@
 
   <li>Exam 1
     <ul>
+      <li><p><a href="handouts/s14_exam1.pdf">Spring 2014 Exam 1</a> and <a
+        href="handouts/s14_exam1_sol.pdf">Solution</a> <font color="red"
+        size="-1"> (posted - 03/04/14)</font> </p></li>
       <li><p><a href="handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
         href="handouts/f13_exam1_sol.pdf">Solution</a> (see questions: 1a, 5) <font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
