added pipelining diagram

--- a/handouts.html
+++ b/handouts.html
@@ -12,86 +12,13 @@
 
 <hr />
 
-<!--
-<ul>
-  <li><a href="handouts/measurement_methodology.pdf">Measurement Methodology</a>
-  <font color="red" size="-1"> (posted - 05/03/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/sequential_consistency.pdf">Sequential Consistency</a>
-  <font color="red" size="-1"> (posted - 05/03/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/cache_coherence.pdf">Cache Coherence</a>
-  <font color="red" size="-1"> (posted - 05/03/13)</font>
-  <br/><font size="-1">Some sequential consistency notes included.</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/interconnection_networks.pdf">Interconnection Networks</a>
-  <font color="red" size="-1"> (posted - 05/03/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/multi_thread_parallelism.pdf">Multi Thread Parallelism</a>
-  <font color="red" size="-1"> (posted - 05/03/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/single_thread_parallelism.pdf">Single Thread Parallelism</a>
-  <font color="red" size="-1"> (posted - 04/14/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/floating_point.pdf">Floating Point</a>
-  <font color="red" size="-1"> (posted - 04/05/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/fixed_point.pdf">Fixed Point</a>
-  <font color="red" size="-1"> (posted - 04/01/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/io_notes.pdf">I/O</a>
-  <font color="red" size="-1"> (posted - 03/29/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/cache_memory.pdf">Cache Memory</a>
-  <font color="red" size="-1"> (posted - 03/19/13)</font>
-  <br/><font size="-1">Interrupts/Exceptions on final page.</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/virtual_memory.pdf">Virtual Memory</a>
-  <font color="red" size="-1"> (posted - 02/25/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/physical_memory.pdf">Physical Memory</a>
-  <font color="red" size="-1"> (posted - 02/21/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/uarch_characteristics.pdf">Microarchitecture Characteristics</a>
-  <font color="red" size="-1"> (posted - 02/04/13)</font></li>
-</ul>
-
-<ul>
-  <li><a href="handouts/isa_characteristics.pdf">ISA Characteristics</a>
-  <font color="red" size="-1"> (posted - 02/04/13)</font></li>
-</ul>
--->
-
 <h2>LC-3b Handouts</h2>
 <ul>
 <li><a href="handouts/state_fixed.pdf">LC-3b State Diagram</a></li>
 <li><a href="handouts/360n_ch07.pdf">Chapter 7, Assembly Language</a></li>
 <li><a href="handouts/new_byte.pdf">Appendix A, The LC-3b ISA</a>
 <li><a href="handouts/360n.appC.pdf">Appendix C, The Microarchitecture of LC-3b</a></li>
+<li><a href="handouts/pipelined_lc3.pdf">Pipelined LC-3b</a></li>
 </ul>
 
 
@@ -101,63 +28,6 @@
     <a href="https://drive.google.com/folderview?id=0BzfuzftCi_w7WXVrLWxraFU5OEk&usp=sharing">Lecture Slides and Handouts</a>
     <br/><font size="-1">Class lecture slides and handouts can be accessed from here</font></li>
   </li>
-  <!--
-  <li>
-    <a href="https://drive.google.com/a/utexas.edu/?tab=mo#folders/0BzfuzftCi_w7OGpvLTJuS2RDem8">Lecture 1 - 08/28/13</a>
-    <font color="red" size="-1">(posted - 09/04/13)</font>
-    <br/><font size="-1">Introduction</font></li>
-  </li>
-  <li>
-    <a href="https://drive.google.com/a/utexas.edu/?tab=mo#folders/0BzfuzftCi_w7OGpvLTJuS2RDem8">Lecture 2 - 09/04/13</a>
-    <font color="red" size="-1">(posted - 09/04/13)</font>
-    <br/><font size="-1">ISA</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture3_notes.pdf">Lecture 3 - 01/23/13</a>
-    <font color="red" size="-1">(posted - 01/23/13)</font>
-    <br/><font size="-1">ISA</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture4_notes.pdf">Lecture 4 - 01/28/13</a>
-    <font color="red" size="-1">(posted - 01/30/13)</font>
-    <br/><font size="-1">Pipelining</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture5_notes.pdf">Lecture 5 - 01/30/13</a>
-    <font color="red" size="-1">(posted - 02/04/13)</font>
-    <br/><font size="-1">Microarch</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture6_notes.pdf">Lecture 6 - 02/04/13</a>
-    <font color="red" size="-1">(posted - 02/04/13)</font>
-    <br/><font size="-1">Performance/Pipelining/HEP/Delayed Branch</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture7_notes.pdf">Lecture 7 - 02/06/13</a>
-    <font color="red" size="-1">(posted - 02/07/13)</font>
-    <br/><font size="-1">Conditional Branches</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture8_notes.pdf">Lecture 8 - 02/11/13</a>
-    <font color="red" size="-1">(posted - 02/13/13)</font>
-    <br/><font size="-1">Branch Prediction/Tomasulo/Data Flow</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture17_notes.pdf">Lecture 17 - 03/20/13</a>
-    <font color="red" size="-1">(posted - 03/26/13)</font>
-    <br/><font size="-1">I/O notes</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture18_notes.pdf">Lecture 18 - 03/25/13</a>
-    <font color="red" size="-1">(posted - 03/29/13)</font>
-    <br/><font size="-1">Lab 4; I/O notes</font></li>
-  </li>
-  <li>
-    <a href="handouts/lectures/lecture21_notes.pdf">Lecture 21 - 04/03/13</a>
-    <font color="red" size="-1">(posted - 04/05/13)</font>
-    <br/><font size="-1">Floating Point</font></li>
-  </li>
-  -->
 </ul>
 
 <!--
