--- a/handouts.html
+++ b/handouts.html
@@ -18,7 +18,8 @@
 <li><a href="handouts/360n_ch07.pdf">Chapter 7, Assembly Language</a></li>
 <li><a href="handouts/new_byte.pdf">Appendix A, The LC-3b ISA</a>
 <li><a href="handouts/360n.appC.pdf">Appendix C, The Microarchitecture of LC-3b</a></li>
-<li><a href="handouts/pipelined_lc3.pdf">Pipelined LC-3b</a></li>
+<li><a href="handouts/pipelined_lc3.pdf">Pipelined LC-3b</a>
+    <font color="red" size="-1">(posted - 04/04/2014)</font></li>
 </ul>
 
 
