added ps and cachesim

--- a/ps.html
+++ b/ps.html
@@ -11,6 +11,14 @@
 
     <h1>Spring, 2014</h1>
     <hr />
+
+    <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1u14-jaV9Ne-MQsDzMF8fLw7HG8cw6XK2fBXLxzaopwU/">Problem Set 3</a>
+    <font color="red" size="-1">(last updated - 03/16/14)</font></h2> 
+    <ul>
+      <li><em>Due Mar 24, before class</em></li>
+      <li><em>Problems marked in Red have been moved to PS4</em></li>
+      <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
+    </ul>
     
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1ds8jOPcRLq33OTRUuJP1Ubr9wEVMA2tNqIdcy5GK3Ks">Cache Problems</a>
     <font color="red" size="-1">(last updated - 02/20/14)</font></h2> 
