--- a/labs.html
+++ b/labs.html
@@ -30,6 +30,16 @@ account. </li>
 <li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.</li>
 </ul>
 
+<h2><a href="https://docs.google.com/a/utexas.edu/document/d/1BLQlk3B8VOl7LZmXukSY_-trrDybEychqVcIPUv_xZg" title ="Lab4 instructions">Lab Assignment 5</a>
+  <font color="red" size="-1">(posted - 03/25/14)</font></h2>
+<p><em>Due: Apr 6 11:59 pm</em></p>
+<ul>
+<li><a href="labs/lab5/Lab5Submit.html" title="Lab Assignment 5 submission instructions">Submission instructions</a>
+  <font color="red" size="-1">(posted - 03/25/14)</font></li>
+  <li>Please note that your C code must simulate the hardware described in the readme and your microcode must represent your submitted state diagram. Significant discrepancies will be penalized harshly.</li>
+  <li>Please make you sure your Lab 4 is correct <strong>before</strong> starting Lab 5. The testing system for Lab 4 is up. See Lab 3 details for usage information.</li>
+</ul>
+
 <h2><a href="https://docs.google.com/a/utexas.edu/document/d/19ve97shgkGHkykdmJrU4a0nGwTzeX0sH5MrxJPYm5XU/" title ="Lab4 instructions">Lab Assignment 4</a>
   <font color="red" size="-1">(posted - 02/28/14)</font></h2>
 <p><em>Due: Mar 23 11:59 pm</em></p>
