--- a/labs/lab5/Lab5Submit.html
+++ b/labs/lab5/Lab5Submit.html
@@ -1,78 +1,85 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-
 <head>
-<title>EE 360N - Lab Submission Instructions</title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<title>EE 460N: Lab Assignment 4 Submission Instructions</title>
+<link rel="StyleSheet" type="text/css" href="../../main.css" />
+<link rel="StyleSheet" type="text/css" href="../labs.css" />
 </head>
-
-<body bgcolor="white">
+<body>
 
 <center>
 <h2>Department of Electrical and Computer Engineering</h2>
 <h3>The University of Texas at Austin</h3>
 </center>
 
-
-EE 360N, Fall 2005<br>
-Submission Instructions for Lab Assignment 5<br>
-Due: November 29 2005, 11:59 pm<br>
-<p>
-
+EE 460N, Spring 2014<br />
+Submission Instructions for Lab Assignment 5<br />
+Due: Sunday, April 6, 2014, 11:59 pm<br />
+<h2>Important Notes</h2>
 You must use the following naming convention for the files in Lab 5.
 <ul>
 <li>
-lc3bsim5.c - The C source code for your LC-3b simulator.
+<tt>lc3bsim5.c</tt> &ndash; the C source code for your LC-3b simulator.
 </li>
 <li>
-ucode5      - The microcode file for your simulator
+<tt>ucode5</tt>      &ndash; the microcode file for your simulator
 </li>
 <li>
-dumpsim     -  The dumpsim file created as specified in the Lab 3 Assignment page.
+<tt>dumpsim</tt>     &ndash;  the dumpsim file created as specified in Lab
+Assignment 5.
 </li>
 <li>
-int.asm, vector_table.asm, except_prot.asm, add.asm, data.asm, pagetable.asm, except_pf.asm  - The assembly language files for the interrupt service routine, the interrupt/exception vector table, the protection exception handler, the user program, the data for locations xC000-xC013, page table, and page fault exception handler.
-</li>
+<tt>int.asm</tt>, <tt>vector_table.asm</tt>, <tt>pagetable.asm</tt>, <tt>add.asm</tt>,
+and <tt>data.asm</tt>  &ndash; the assembly language files for the interrupt
+service routine, the interrupt/exception vector table, the page table, the user program, and the data for locations <code>xC000</code>&ndash;<code>xC013</code>.</li>
+
 <li>
-int.hex, vector_table.hex, except_prot.hex, add.hex, data.hex, pagetable.hex, except_pf.hex  - The machine code for the interrupt service routine, the interrupt/exception vector table, the protection exception handler, the user program, the data for locations xC000-xC013, page table, and page fault exception handler.
-</li>
-<li>
-readme.txt or readme.ps or readme.pdf or readme.tar - A printable file showing the changes you have implemented in the datapath. This file can be in the following formats - text, postscript, PDF or HTML with images. <font color="red"> Please submit a hardcopy of your documentation in class on Wednesday November 30.</font>
+<strong>Please upload a copy of your documentation in PDF format on blackboard before
+class on Monday, April 7, 2014.</strong>
 </li>
 </ul>
-You may not submit more than 18 files for Lab 5.
-<p>
-NOTE: 
-<li>Please confirm that your file compiles by running gcc -ansi lc3bsim5.c on any ECE linux machine (linux01-linux24.ece.utexas.edu) before submitting your program.
+<p>You may not submit more than 18 files for Lab 5.</p>
+
+<p>Please confirm that your file compiles (by using <tt>gcc -ansi
+  lc3bsim5.c</tt>) and runs on any <b>ECE LRC linux machine before submitting
+  your program</b>.  Please issue command <tt>uname</tt> and make sure the
+output is Linux. Note that sunfire machines are not Linux machines.</p>
+
+<p>In order to help us assign you the grades, we need your names and UTEIDs at
+the top of the <tt>lc3bsim5.c</tt> file in the <b>EXACT</b> following format,
+as a C comment:</p>
+
+<ul>
+<li>
+<pre><code>/*
+        Name: Fullname of the student 
+        UTEID: UTEID of the student
+*/</code></pre>
+<p>Example:</p>
+<pre><code>/*
+        Name: Milad Hashemi
+        UTEID: mhashemi
+*/</code></pre>
+</li>
 </ul>
 
-<br>
-Before the deadline, you may resubmit any of the files without penalty. Every time you resubmit a file, the
-original file is overwritten.
-<br>
+<h2>Instructions For Submission</h2>
 
-Instructions for submission:<br>
+<p>Turn in the following files:</p>
+<pre><tt>
+lc3bsim5.c
+ucode5
+dumpsim
+int.asm
+vector_table.asm
+pagetable.asm
+add.asm
+data.asm
+</tt></pre>
+<p>by following these <a href="../lab_submit.html">instructions.</a></p>
 
-<OL>
-<li>
-SSH into sunfire1 with the following command:
-<br>
-ssh sunfire1.ece.utexas.edu<br>
-<br>
-<li>
-After typing your username and password, submit your files with the<br>
-following
-command:<br>
-<br>
-submit-ee360n lc3bsim5.c ucode5 dumpsim <br>
-( This command is to submit the first 3 files. The remaining can be submitted by changing the names of the files. )
-
-<br>
-<br>
-<li>
-You may check the files submitted with the following command:<br>
-<br>
-submit-ee360n -ls<br>
-<br>
-</ol>
-
+</body>
 </body>
 </html>
